fixe:regapi

--- a/ROOT/app/wn.ticket/_ticket.less
+++ b/ROOT/app/wn.ticket/_ticket.less
@@ -225,6 +225,10 @@
     left: 0;
   }
 
+  .atta-image {
+    width: 100%;
+  }
+
 }
 
 /*.............................................. mask*/
